Fixed style on mobile devices

--- a/themes/polar/static/css/style.css
+++ b/themes/polar/static/css/style.css
@@ -54,11 +54,23 @@ Table of Contents
 Table of Contents End
 ******************************************************/  
 
+/** Custom TiGL styles **/
+.feature-image, .video-container {
+	max-width: 570px;
+}
+
+.feature-image img {
+	width: 100%;
+}
+
+.video-container video {
+	width: 100%;
+}
 
 
 /* 1 - Google Font 
 ******************************************************/
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800);
 /* 1 - Google Font 
 ******************************************************/
 
